tests/NormalTests/paczka1/small_fuzzy/35534430.err
Error in line 5: xJjWrQ1M1dN A890 -3,2
Error in line 2: xJjWrQ1M1dN A890 69,3
Error in line 11: ZdfpMs A890 65,8
